// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c3 {
  margin: 0px;
  padding: 0px;
  line-height: 1.2;
  font-family: 'Roboto',sans-serif;
  color: #2a2a2a;
  font-weight: 500;
  font-size: 1.25rem;
  padding: 24px;
}

.c5 {
  font-size: 1.5rem;
}

.c7 {
  box-sizing: border-box;
  padding: 24px;
}

.c0 {
  border: 1px solid rgba(0,0,0,0.15);
  background-color: white;
}

.c4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 24px;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid rgba(0,0,0,0.15);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: white;
  cursor: pointer;
}

.c8 {
  padding: 24px;
  border-top: 1px solid rgba(0,0,0,0.15);
}

.c6 {
  color: #2a2a2a;
  font-size: 2rem;
}

<div
  className="c0"
>
  <div
    className="c1"
    open={true}
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      <h5
        className="c3"
      >
        Text header
      </h5>
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <span
        style={
          Object {
            "display": "inline-flex",
            "transform": "rotate(180deg)",
          }
        }
      >
        <span
          className="c5 material-icons c6"
          role="button"
        >
          expand_more
        </span>
      </span>
    </div>
  </div>
  <div
    style={
      Object {
        "height": 0,
        "opacity": 1,
        "overflow": "visible",
      }
    }
  >
    <div
      className="CollapseContent"
    >
      <div
        className="c7"
      >
        <div>
          Collapse children
        </div>
      </div>
      <div
        className="c8"
      >
        <button>
          Footer button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly 2`] = `
.c4 {
  font-size: 1.5rem;
}

.c6 {
  box-sizing: border-box;
  padding: 24px;
}

.c0 {
  border: 1px solid rgba(0,0,0,0.15);
  background-color: white;
}

.c3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 24px;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid rgba(0,0,0,0.15);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: white;
  cursor: pointer;
}

.c7 {
  padding: 24px;
  border-top: 1px solid rgba(0,0,0,0.15);
}

.c5 {
  color: #2a2a2a;
  font-size: 2rem;
}

<div
  className="c0"
>
  <div
    className="c1"
    open={true}
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      <div>
        Element header
      </div>
    </div>
    <div
      className="c3"
      onClick={[Function]}
    >
      <span
        style={
          Object {
            "display": "inline-flex",
            "transform": "rotate(180deg)",
          }
        }
      >
        <span
          className="c4 material-icons c5"
          role="button"
        >
          expand_more
        </span>
      </span>
    </div>
  </div>
  <div
    style={
      Object {
        "height": 0,
        "opacity": 1,
        "overflow": "visible",
      }
    }
  >
    <div
      className="CollapseContent"
    >
      <div
        className="c6"
      >
        <div>
          Collapse children
        </div>
      </div>
      <div
        className="c7"
      >
        <button>
          Footer button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when closed 1`] = `
.c3 {
  margin: 0px;
  padding: 0px;
  line-height: 1.2;
  font-family: 'Roboto',sans-serif;
  color: #2a2a2a;
  font-weight: 500;
  font-size: 1.25rem;
  padding: 24px;
}

.c5 {
  font-size: 1.5rem;
}

.c7 {
  box-sizing: border-box;
  padding: 24px;
}

.c0 {
  border: 1px solid rgba(0,0,0,0.15);
  background-color: white;
}

.c4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 24px;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: white;
  cursor: pointer;
}

.c8 {
  padding: 24px;
  border-top: 1px solid rgba(0,0,0,0.15);
}

.c6 {
  color: #2a2a2a;
  font-size: 2rem;
}

<div
  className="c0"
>
  <div
    className="c1"
    open={false}
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      <h5
        className="c3"
      >
        Header
      </h5>
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <span
        style={
          Object {
            "display": "inline-flex",
            "transform": "rotate(0deg)",
          }
        }
      >
        <span
          className="c5 material-icons c6"
          role="button"
        >
          expand_more
        </span>
      </span>
    </div>
  </div>
  <div
    style={
      Object {
        "height": 0,
        "opacity": 0,
        "overflow": "hidden",
      }
    }
  >
    <div
      className="CollapseContent"
    >
      <div
        className="c7"
      >
        <div>
          Hello world!
        </div>
      </div>
      <div
        className="c8"
      >
        <div>
          footer
        </div>
      </div>
    </div>
  </div>
</div>
`;
